add kind to fix #68
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/block_updates_deletes.yaml
+++ b/other/block_updates_deletes.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       Kubernetes RBAC allows for controls on kinds of resources or those
       with specific names. This policy restricts updates and deletes to any
-      resource that contains the label `protected="true"` unless by
+      Service resource that contains the label `protected="true"` unless by
       a cluster-admin and thus functions as a more granular option to
       Kubernetes RBAC. 
 spec:
@@ -19,6 +19,8 @@ spec:
   - name: block-updates-deletes
     match:
       resources:
+        kind:
+        - Service
         selector:
           matchLabels:
             protected: "true"   
