update ensure_probes_different to use JMESPath comparison logic
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/ensure_probes_different.yaml
+++ b/other/ensure_probes_different.yaml
@@ -3,70 +3,29 @@ kind: ClusterPolicy
 metadata:
   name: validate-probes  
   annotations:
-    # Only applies to pods originating from DaemonSet, Deployment, or StatefulSet.
-    pod-policies.kyverno.io/autogen-controllers: DaemonSet,Deployment,StatefulSet  
+    pod-policies.kyverno.io/autogen-controllers: none  
     policies.kyverno.io/title: Validate Probes
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Sample policy to check that liveness and readiness probes are not set to the same values.
+      Sample policy to check that liveness and readiness probes are not equal.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: enforce
   background: false
   rules:
-    # Checks the first container in a Pod.
-    - name: validate-probes-c0
+    - name: validate-probes
       match:
         resources:
           kinds:
-          - Pod
-      validate:
-        message: "Liveness and readiness probes cannot be the same."
-        # A `deny` rule is different in structure than a `validate` rule and inverts the check. It uses `conditions` written in JMESPath notation upon which to base its decisions.
-        deny:
-          conditions:
-          # In this condition, it checks the entire map structure of the `readinessProbe` against that of the `livenessProbe`. If both are found to be equal, the Pod creation
-          # request will be denied.
-          - key: "{{ request.object.spec.containers[0].readinessProbe }}"
-            operator: Equals
-            value: "{{ request.object.spec.containers[0].livenessProbe }}"
-    # Checks the second container in a Pod.
-    - name: validate-probes-c1
-      match:
-        resources:
-          kinds:
-          - Pod
+          - Deployment
+          - DaemonSet
+          - StatefulSet
       validate:
         message: "Liveness and readiness probes cannot be the same."
         deny:
           conditions:
-          - key: "{{ request.object.spec.containers[1].readinessProbe }}"
-            operator: Equals
-            value: "{{ request.object.spec.containers[1].livenessProbe }}"
-    # Checks the third container in a Pod.
-    - name: validate-probes-c2
-      match:
-        resources:
-          kinds:
-          - Pod
-      validate:
-        message: "Liveness and readiness probes cannot be the same."
-        deny:
-          conditions:
-          - key: "{{ request.object.spec.containers[2].readinessProbe }}"
-            operator: Equals
-            value: "{{ request.object.spec.containers[2].livenessProbe }}"
-    # Checks the fourth container in a Pod.
-    - name: validate-probes-c3
-      match:
-        resources:
-          kinds:
-          - Pod
-      validate:
-        message: "Liveness and readiness probes cannot be the same."
-        deny:
-          conditions:
-          - key: "{{ request.object.spec.containers[3].readinessProbe }}"
-            operator: Equals
-            value: "{{ request.object.spec.containers[3].livenessProbe }}"
+          - key: "{{ request.object.spec.template.spec.containers[?readinessProbe!=livenessProbe] | length(@) }}"
+            operator: NotEquals
+            value: "0"
