--- a/other/ensure_probes_different.yaml
+++ b/other/ensure_probes_different.yaml
@@ -26,6 +26,6 @@ spec:
         message: "Liveness and readiness probes cannot be the same."
         deny:
           conditions:
-          - key: "{{ request.object.spec.template.spec.containers[?readinessProbe!=livenessProbe] | length(@) }}"
-            operator: NotEquals
+          - key: "{{ request.object.spec.template.spec.containers[?readinessProbe==livenessProbe] | length(@) }}"
+            operator: GreaterThan
             value: "0"
