Change enforce mode to audit for all validate policies
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/restrict_image_registries/restrict_image_registries.yaml
+++ b/best-practices/restrict_image_registries/restrict_image_registries.yaml
@@ -13,7 +13,7 @@ metadata:
       Requiring use of known registries helps reduce threat exposure.
 spec:
   background: false
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: validate-registries
     match:
