--- a/other/block-pod-exec-by-namespace-label.yaml
+++ b/other/block-pod-exec-by-namespace-label.yaml
@@ -12,7 +12,7 @@ metadata:
       be useful for troubleshooting purposes, it could represent an attack vector and is discouraged.
       This policy blocks Pod exec commands based upon a Namespace label `exec=false`.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
   - name: deny-exec-by-ns-label
