--- a/other/disallow_localhost_services/disallow_localhost_services.yaml
+++ b/other/disallow_localhost_services/disallow_localhost_services.yaml
@@ -12,7 +12,7 @@ metadata:
       vulnerabilities in some Ingress controllers. This sample policy blocks Services of type ExternalName
       if the externalName field refers to localhost.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: no-localhost-service
     match:
