--- a/other/restrict_service_account.yaml
+++ b/other/restrict_service_account.yaml
@@ -15,7 +15,7 @@ metadata:
       Example: 'sa-name: ["registry/image-name"]'
 spec:
   background: false
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: validate-service-account
     context:
