--- a/other/block-pod-exec-by-namespace.yaml
+++ b/other/block-pod-exec-by-namespace.yaml
@@ -12,7 +12,7 @@ metadata:
       be useful for troubleshooting purposes, it could represent an attack vector and is discouraged.
       This policy blocks Pod exec commands to Pods in a Namespace called `pci`.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
   - name: deny-exec-ns-pci
