--- a/other/exclude_namespaces_dynamically.yaml
+++ b/other/exclude_namespaces_dynamically.yaml
@@ -12,7 +12,7 @@ metadata:
       where the ConfigMap stores an array of strings. This policy validates that any Pods created
       outside of the list of Namespaces have the label `foo` applied.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
   - name: exclude-namespaces-dynamically
