--- a/other/require_imagepullsecrets.yaml
+++ b/other/require_imagepullsecrets.yaml
@@ -12,7 +12,7 @@ metadata:
       from them. This sample policy checks those images and if they come from a registry
       other than ghcr.io or quay.io an `imagePullSecret` is required.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: check-for-image-pull-secrets
     match:
