--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -25,8 +25,8 @@ spec:
           containers:
           - securityContext:
               capabilities:
-                drop: ["ALL | NET_RAW"]
+                drop: ["ALL"]
           =(initContainers):
           - =(securityContext):
               (capabilities):
-                drop: ["ALL | NET_RAW"]
+                drop: ["ALL"]
