change validateFailureAction and update description
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/best-practices/check_deprecated_apis.yaml
+++ b/best-practices/check_deprecated_apis.yaml
@@ -6,9 +6,10 @@ metadata:
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/description: >-
       Kubernetes APIs are sometimes deprecated and removed after a few releases. 
-      As a best practice older API versions should be replaced with newer versions.
+      As a best practice older API versions should be replaced with newer versions. 
+      This policy validates for APIs that are deprecated or scheduled for removal.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: validate-v1-22-removals
     match:
