add title and subject
Signed-off-by: Jim Bugwadia <jim@nirmata.com>

--- a/best-practices/check_deprecated_apis.yaml
+++ b/best-practices/check_deprecated_apis.yaml
@@ -3,7 +3,9 @@ kind: ClusterPolicy
 metadata:
   name: check-deprecated-apis
   annotations:
+    policies.kyverno.io/title: Check deprecated APIs
     policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/subject: Kubernetes APIs
     policies.kyverno.io/description: >-
       Kubernetes APIs are sometimes deprecated and removed after a few releases. 
       As a best practice older API versions should be replaced with newer versions. 
