--- a/other/require_imagepullsecrets.yaml
+++ b/other/require_imagepullsecrets.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Some registries, both public and private, require credentials in order to pull images
-      from them. This sample policy checks those images and if they come from a registry
+      from them. This sample checks those images and if they come from a registry
       other than ghcr.io or quay.io an `imagePullSecret` is required.
 spec:
   validationFailureAction: audit
