--- a/other/require_pdb.yaml
+++ b/other/require_pdb.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/subject: Deployment, PodDisruptionBudget
     policies.kyverno.io/description: >-
       PodDisruptionBudget resources are useful to ensuring minimum availability
-      is maintained at all times. This sample policy checks all incoming Deployments
+      is maintained at all times. This sample checks all incoming Deployments
       to ensure they have a matching, preexisting PodDisruptionBudget.
 spec:
   validationFailureAction: audit
