--- a/other/spread_pods_across_topology.yaml
+++ b/other/spread_pods_across_topology.yaml
@@ -7,7 +7,10 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Deployment, Pod
     policies.kyverno.io/description: >-
-      Sample policy to spread pods matching a label across nodes.
+      Deployments to a Kubernetes cluster with multiple availability zones often need to
+      distribute those replicas to align with those zones to ensure site-level failures
+      do not impact availability. This sample policy matches Deployments with the label
+      `distributed=required` and mutates them to spread Pods across zones.
 spec:
   rules:
     - name: spread-pods-across-nodes
