--- a/other/sync_secrets.yaml
+++ b/other/sync_secrets.yaml
@@ -8,10 +8,11 @@ metadata:
     policies.kyverno.io/subject: Secret
     policies.kyverno.io/description: >-
       Secrets like registry credentials often need to exist in multiple
-      namespaces so pods there have access. This sample policy will copy a
-      secret called "regcred" which exists in the default namespace to
-      new namespaces when they are created. It will also push updates to
-      the copied secrets should the source secret be changed.
+      Namespaces so Pods there have access. Manually duplicating those Secrets
+      is time consuming and error prone. This sample will copy a
+      Secret called `regcred` which exists in the `default` Namespace to
+      new Namespaces when they are created. It will also push updates to
+      the copied Secrets should the source Secret be changed.
 spec:
   background: false
   rules:
