--- a/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
+++ b/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
@@ -9,7 +9,8 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The runtime default seccomp profile must be required, or only specific
-      additional profiles should be allowed.
+      additional profiles should be allowed. This sample ensures that only the
+      `runtime/default` is used as a `type`.
 spec:
   background: true
   validationFailureAction: audit
