--- a/best-practices/disallow_latest_tag/disallow_latest_tag.yaml
+++ b/best-practices/disallow_latest_tag/disallow_latest_tag.yaml
@@ -10,7 +10,8 @@ metadata:
     policies.kyverno.io/description: >-
       The ':latest' tag is mutable and can lead to unexpected errors if the 
       image changes. A best practice is to use an immutable tag that maps to 
-      a specific version of an application pod.
+      a specific version of an application Pod. This sample validates that the image
+      specifies a tag and that it is not called `latest`.
 spec:
   validationFailureAction: audit
   rules:
