--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -9,7 +9,9 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Capabilities permit privileged actions without giving full root access. All 
-      capabilities should be dropped from a pod, with only those required added back.
+      capabilities should be dropped from a Pod, with only those required added back.
+      This sample ensures that all containers explicitly specify the `drop: ["ALL"]`
+      ability.
 spec:
   validationFailureAction: audit
   rules:
