--- a/cert-manager/limit-dnsnames.yaml
+++ b/cert-manager/limit-dnsnames.yaml
@@ -9,7 +9,10 @@ metadata:
     policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/subject: Certificate
     policies.kyverno.io/description: >-
-      Ensures that each certificate request contains only one DNS name entry.
+      Some applications will not accept certificates containing more than a single name.
+      Additionally, having a single certificate name multiple potentially increases
+      overhead and complexity. This sample ensures that each certificate request contains
+      only one DNS name entry.
 spec:
   validationFailureAction: audit
   background: false
