--- a/other/add-default-securitycontext.yaml
+++ b/other/add-default-securitycontext.yaml
@@ -7,10 +7,10 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      A Pod securityContext entry defines fields such as the user and group should be used to run the Pod.
+      A Pod securityContext entry defines fields such as the user and group which should be used to run the Pod.
       Sometimes choosing default values for users rather than blocking is a better alternative to not impede
       such Pod definitions. This sample will mutate a Pod to set `runAsUser`, `runAsGroup`, and `fsGroup` fields
-      within the Pod securityContext if they are not present.
+      within the Pod securityContext if they are not already set.
 spec:
   background: false
   rules:
