--- a/other/add_nodeSelector.yaml
+++ b/other/add_nodeSelector.yaml
@@ -7,7 +7,9 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Adds the nodeSelector field to a Pod spec.
+      The nodeSelector field uses labels to select the node which node a Pod can be scheduled on.
+      This can be useful when Pods have specific needs that only certain nodes in a cluster can provide.
+      This sample adds the nodeSelector field to a Pod spec and configures it with two labels as shown below.
 spec:
   background: false
   rules:
