--- a/other/create_pod_antiaffinity.yaml
+++ b/other/create_pod_antiaffinity.yaml
@@ -7,7 +7,10 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Deployment, Pod
     policies.kyverno.io/description: >-
-      Sample policy to add Pod anti-affinity
+      Applications may involve multiple replicas of the same Pod for availability as well as scale
+      purposes, yet Kubernetes does not by default provide a solution for availability. This sample
+      sets a Pod anti-affinity configuration on Deployments which contain an `app` label if it is
+      not already present.
 spec:
   rules:
     - name: insert-pod-antiaffinity
