--- a/other/disallow_localhost_services/disallow_localhost_services.yaml
+++ b/other/disallow_localhost_services/disallow_localhost_services.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/subject: Service
     policies.kyverno.io/description: >-
       A Service of type ExternalName which points back to localhost can potentially be used to exploit
-      vulnerabilities in some Ingress controllers. This sample policy blocks Services of type ExternalName
+      vulnerabilities in some Ingress controllers. This sample blocks Services of type ExternalName
       if the externalName field refers to localhost.
 spec:
   validationFailureAction: audit
