--- a/other/ensure_probes_different.yaml
+++ b/other/ensure_probes_different.yaml
@@ -10,7 +10,9 @@ metadata:
     policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Sample policy to check that liveness and readiness probes are not equal.
+      Liveness and readiness probes accomplish different goals, and setting both to the same
+      is an anti-pattern and often results in app problems in the future. This sample
+      checks that liveness and readiness probes are not equal.
 spec:
   validationFailureAction: audit
   background: false
