--- a/other/imagepullpolicy-always.yaml
+++ b/other/imagepullpolicy-always.yaml
@@ -8,7 +8,10 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Sample policy that sets imagePullPolicy to "Always" when the "latest" tag is used.
+      If the `latest` tag is allowed for images, it is often recommended to set the
+      imagePullPolicy field to `Always` to ensure should that tag be overwritten that future
+      pulls will get the updated image. This sample sets imagePullPolicy to `Always`
+      when the `latest` tag is specified explicitly or where a tag is not defined at all.
 spec:
   validationFailureAction: audit
   background: false
