--- a/other/limit_containers_per_pod.yaml
+++ b/other/limit_containers_per_pod.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Pods can have between one and a number of different containers included which
+      Pods can have many different containers which
       are tightly coupled. It may be desired to limit the amount of containers that
       can be in a single Pod to control best practice application or so policy can
       be applied consistently. This sample checks all Pods to ensure they have
