--- a/other/memory-requests-equal-limits.yaml
+++ b/other/memory-requests-equal-limits.yaml
@@ -10,7 +10,9 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/description: >-
-      Checks that all containers in a given Pod have memory requests equal to limits.
+      Pods which have memory limits equal to requests are given a QoS class of Guaranteed
+      which is the highest schedulable class. This sample checks that all containers in
+      a given Pod have memory requests equal to limits.
 spec:
   validationFailureAction: audit
   background: false
