--- a/other/restrict_ingress_host.yaml
+++ b/other/restrict_ingress_host.yaml
@@ -9,7 +9,9 @@ metadata:
     policies.kyverno.io/subject: Ingress
     policies.kyverno.io/minversion: 1.3.2
     policies.kyverno.io/description: >-
-      Checks an incoming Ingress resource to ensure its hosts are unique to the cluster.
+      An Ingress host is a URL at which services may be made available externally. In most cases,
+      these hosts should be unique across the cluster to ensure no routing conflicts occur.
+      This sample checks an incoming Ingress resource to ensure its hosts are unique to the cluster.
 spec:
   validationFailureAction: audit
   background: false
