--- a/pod-security/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
+++ b/pod-security/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
@@ -7,7 +7,8 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Privileged mode disables most security mechanisms and must not be allowed.
+      Privileged mode disables most security mechanisms and must not be allowed. This sample
+      ensures Pods do not call for privileged mode.
 spec:
   validationFailureAction: audit
   background: true
