--- a/pod-security/baseline/disallow-selinux/disallow-selinux.yaml
+++ b/pod-security/baseline/disallow-selinux/disallow-selinux.yaml
@@ -8,7 +8,8 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      SELinux options can be used to escalate privileges and should not be allowed.
+      SELinux options can be used to escalate privileges and should not be allowed. This sample
+      ensures that the `seLinuxOptions` field is undefined.
 spec:
   validationFailureAction: audit
   background: true
