--- a/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
+++ b/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
@@ -6,7 +6,9 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/description: Containers must be required to run as non-root users.
+    policies.kyverno.io/description: >-
+      Containers must be required to run as non-root users. This sample ensures
+      `runAsNonRoot` is set to `true`.
 spec:
   background: true
   validationFailureAction: audit
