--- a/other/replace_image_registry.yaml
+++ b/other/replace_image_registry.yaml
@@ -30,4 +30,4 @@ spec:
             containers:
             - (name): "*"
               image: |-
-                {{ regex_replace_all('(.*)\/', '{{@}}', 'myregistry.corp.com/') }}
+                {{ regex_replace_all('^[^/]+', '{{@}}', 'myregistry.corp.com') }}
