Fix externalIPs of nil => "null"

--- a/best-practices/restrict-service-external-ips/restrict-service-external-ips.yaml
+++ b/best-practices/restrict-service-external-ips/restrict-service-external-ips.yaml
@@ -26,4 +26,4 @@ spec:
           # restrict external IP addresses
           # you can alternatively restrict to a known set of addresses using:
           #     =(externalIPs): ["37.10.11.53", "153.10.20.1"]
-          X(externalIPs): nil
+          X(externalIPs): "null"
