--- a/pod-security/baseline/disallow-host-ports/disallow-host-ports.yaml
+++ b/pod-security/baseline/disallow-host-ports/disallow-host-ports.yaml
@@ -26,7 +26,7 @@ spec:
           spec:
             =(initContainers):
               - =(ports):
-                  - X(hostPort): 0
+                  - X(hostPort): "null"
             containers:
               - =(ports):
-                  - X(hostPort): 0
+                  - X(hostPort): "null"
