--- a/other/create_pod_antiaffinity.yaml
+++ b/other/create_pod_antiaffinity.yaml
@@ -41,4 +41,4 @@ spec:
                             - key: app
                               operator: In
                               values:
-                              - "{{request.object.metadata.labels.app}}"
+                              - "{{request.object.spec.template.metadata.labels.app}}"
