fix name to be accurate
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/other/imagepullpolicy-always.yaml
+++ b/other/imagepullpolicy-always.yaml
@@ -3,14 +3,14 @@ kind: ClusterPolicy
 metadata:
   name: imagepullpolicy-always
   annotations:
-    policies.kyverno.io/title: Set imagePullPolicy
+    policies.kyverno.io/title: Require imagePullPolicy Always
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      If the `latest` tag is allowed for images, it is often recommended to set the
-      imagePullPolicy field to `Always` to ensure should that tag be overwritten that future
-      pulls will get the updated image. This sample sets imagePullPolicy to `Always`
+      If the `latest` tag is allowed for images, it is a good idea to have the
+      imagePullPolicy field set to `Always` to ensure should that tag be overwritten that future
+      pulls will get the updated image. This sample validates the imagePullPolicy is set to `Always`
       when the `latest` tag is specified explicitly or where a tag is not defined at all.
 spec:
   validationFailureAction: audit
