Added results in test.yaml for recently added resource
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/require_image_checksum/test.yaml
+++ b/other/require_image_checksum/test.yaml
@@ -8,3 +8,7 @@ results:
     rule: require-image-checksum
     resource: myapp-pod
     status: pass
+  - policy: require-image-checksum
+    rule: require-image-checksum
+    resource: myapp-pod-2
+    status: fail
