Updated policy name in the test.yaml file
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/require_image_checksum/test.yaml
+++ b/other/require_image_checksum/test.yaml
@@ -1,6 +1,6 @@
 name: require-image-checksum
 policies:
-  -  require-image-checksum.yaml
+  -  require_image_checksum.yaml
 resources:
   -  resource.yaml
 results:
