--- a/best-practices/add_ns_quota.yaml
+++ b/best-practices/add_ns_quota.yaml
@@ -7,12 +7,11 @@ metadata:
     policies.kyverno.io/category: Multi-Tenancy
     policies.kyverno.io/subject: ResourceQuota, LimitRange
     policies.kyverno.io/description: >-
-      In order to better control the number of resources that can be created in a
-      given Namespace as well as to provide some default resource consumption limits for
-      Pods in that Namespace, a ResourceQuota and LimitRange resources can be created.
-      This sample, upon seeing the creation of a new Namespace, will generate a
-      ResourceQuota and LimitRange resource configuring them according to the `spec` objects
-      shown in the below rules.
+      To better control the number of resources that can be created in a given 
+      Namespace and provide default resource consumption limits for Pods,
+      ResourceQuota and LimitRange resources are recommended.
+      This sample will generate ResourceQuota and LimitRange resources when
+      a new Namespace is created.
 spec:
   rules:
   - name: generate-resourcequota
