--- a/best-practices/require_pod_requests_limits/require_pod_requests_limits.yaml
+++ b/best-practices/require_pod_requests_limits/require_pod_requests_limits.yaml
@@ -9,8 +9,8 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       As application workloads share cluster resources, it is important to limit resources 
-      requested and consumed by each Pod. It is recommended to require 'resources.requests' 
-      and 'resources.limits.memory' per Pod. If a Namespace level request or limit is specified, 
+      requested and consumed by each Pod. It is recommended to require resource requests and
+      limits per Pod, especially for memory and CPU. If a Namespace level request or limit is specified, 
       defaults will automatically be applied to each Pod based on the 'LimitRange' configuration.
       This sample validates that all containers have something specified for memory and cpu
       requests and memory limits.
