--- a/other/pod_lifetime_annotation/policy.yaml
+++ b/other/pod_lifetime_annotation/policy.yaml
@@ -8,10 +8,12 @@ metadata:
     policies.kyverno.io/minversion: 1.4,2
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
+      This validation is valuable with annotations are used to define durations,
+      such as to ensure a pod lifetime annotation does not exceed some site specific max threshold.
       Pod lifetime annotation can be no greater than 8 hours.
 spec:
   background: false
-  validationFailureAction: enforce
+  validationFailureAction: audit
   rules:
   - name: pods-lifetime
     match:
