fix "require drop all" to conform to cap_net_raw
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -29,6 +29,6 @@ spec:
               capabilities:
                 drop: ["ALL"]
           =(initContainers):
-          - =(securityContext):
-              (capabilities):
+          - securityContext:
+              capabilities:
                 drop: ["ALL"]
