--- a/other/pod_lifetime_annotation/policy.yaml
+++ b/other/pod_lifetime_annotation/policy.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/minversion: 1.4.2
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      This validation is valuable with annotations are used to define durations,
+      This validation is valuable when annotations are used to define durations,
       such as to ensure a pod lifetime annotation does not exceed some site specific max threshold.
       Pod lifetime annotation can be no greater than 8 hours.
 spec:
