further refine and fix policy descriptions
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/disallow_cri_sock_mount/disallow_cri_sock_mount.yaml
+++ b/best-practices/disallow_cri_sock_mount/disallow_cri_sock_mount.yaml
@@ -10,7 +10,8 @@ metadata:
     policies.kyverno.io/description: >-
       Container daemon socket bind mounts allows access to the container engine on the 
       node. This access can be used for privilege escalation and to manage containers 
-      outside of Kubernetes, and hence should not be allowed.  
+      outside of Kubernetes, and hence should not be allowed. This policy validates that
+      the sockets used for CRI engines Docker, Containerd, and CRI-O are not used.
 spec:
   validationFailureAction: audit
   rules:
