--- a/cert-manager/limit-dnsnames.yaml
+++ b/cert-manager/limit-dnsnames.yaml
@@ -10,8 +10,7 @@ metadata:
     policies.kyverno.io/subject: Certificate
     policies.kyverno.io/description: >-
       Some applications will not accept certificates containing more than a single name.
-      Additionally, having a single certificate name multiple potentially increases
-      overhead and complexity. This policy ensures that each certificate request contains
+      This policy ensures that each certificate request contains
       only one DNS name entry.
 spec:
   validationFailureAction: audit
