--- a/other/add_nodeSelector.yaml
+++ b/other/add_nodeSelector.yaml
@@ -7,9 +7,9 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      The nodeSelector field uses labels to select the node which node a Pod can be scheduled on.
+      The nodeSelector field uses labels to select the node on which a Pod can be scheduled.
       This can be useful when Pods have specific needs that only certain nodes in a cluster can provide.
-      This policy adds the nodeSelector field to a Pod spec and configures it with two labels as shown below.
+      This policy adds the nodeSelector field to a Pod spec and configures it with labels `foo` and `color`.
 spec:
   background: false
   rules:
