--- a/other/block-pod-exec-by-pod-name.yaml
+++ b/other/block-pod-exec-by-pod-name.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/minversion: 1.4.2
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      The `exec` command may be used to gain shell access to a given Pod. While this can
+      The `exec` command may be used to gain shell access, or run other commands, in a Pod's container. While this can
       be useful for troubleshooting purposes, it could represent an attack vector and is discouraged.
       This policy blocks Pod exec commands to Pods beginning with the name
       `myapp-maintenance-`.
