--- a/other/restrict_usergroup_fsgroup_id.yaml
+++ b/other/restrict_usergroup_fsgroup_id.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       All processes inside a Pod can be made to run with specific user and groupID 
-      by setting 'runAsUser' and 'runAsGroup' respectively. 'fsGroup' can be specified 
+      by setting `runAsUser` and `runAsGroup` respectively. `fsGroup` can be specified 
       to make sure any file created in the volume will have the specified groupID. 
       This policy validates that these fields are set to the defined values.
 spec:
