modified policy to fix bug
Signed-off-by: siddharthlal25 <siddharthlal25@gmail.com>

--- a/cert-manager/limit-dnsnames/limit-dnsnames.yaml
+++ b/cert-manager/limit-dnsnames/limit-dnsnames.yaml
@@ -21,11 +21,10 @@ spec:
       resources:
         kinds:
         - Certificate
-    preconditions:
-      any:
-      - key: "{{request.object.spec.dnsNames | length(@)}}"
-        operator: GreaterThan
-        value: "1"
     validate:
       message: Only one dnsNames entry allowed per certificate request.
-      deny: {}
+      deny:
+        conditions:
+        - key: "{{request.object.spec.dnsNames | length(@)}}"
+          operator: GreaterThan
+          value: "1"
