added another test
Signed-off-by: siddharthlal25 <siddharthlal25@gmail.com>

--- a/cert-manager/limit-dnsnames/test.yaml
+++ b/cert-manager/limit-dnsnames/test.yaml
@@ -8,4 +8,7 @@ results:
     rule: limit-dnsnames
     resource: letsencrypt-crt
     status: fail
-  
+  - policy: cert-manager-limit-dnsnames
+    rule: limit-dnsnames
+    resource: acme-crt
+    status: pass
