--- a/cert-manager/limit-dnsnames/resource.yaml
+++ b/cert-manager/limit-dnsnames/resource.yaml
@@ -1,6 +1,19 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
+  name: acme-crt
+spec:
+  secretName: acme-crt-secret
+  dnsNames:
+  - example.com
+  issuerRef:
+    name: acme-prod
+    kind: Issuer
+    group: cert-manager.io
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
   name: letsencrypt-crt
 spec:
   secretName: letsencrypt-crt-secret
@@ -11,4 +24,3 @@ spec:
     name: letsencrypt-prod
     kind: Issuer
     group: cert-manager.io
-
