Updated patch.yaml file name to patchedResource.yaml
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/add_labels/test.yaml
+++ b/other/add_labels/test.yaml
@@ -7,7 +7,7 @@ results:
   - policy: add-labels
     rule: add-labels
     resource: myapp-pod
-    patchedResource: patch.yaml
+    patchedResource: patchedResource.yaml
     kind: Pod
     namespace: default
     status: pass
