Specified validationFailureAction and background attributes in all rules
Signed-off-by: Soto Sugita <sotosugi@amazon.co.jp>

--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -1,41 +1,43 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
-metadata: 
+metadata:
   name: add-safe-to-evict
   annotations:
-    policies.kyverno.io/title: Add safe-to-evict 
+    policies.kyverno.io/title: Add safe-to-evict
     policies.kyverno.io/category: Best Practices
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      The Kubernetes cluster autoscaler does not evict pods that use hostPath 
-      or emptyDir volumes. To allow eviction of these pods, the annotation 
-      cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to pods. 
-spec: 
-  rules: 
+      The Kubernetes cluster autoscaler does not evict pods that use hostPath
+      or emptyDir volumes. To allow eviction of these pods, the annotation
+      cluster-autoscaler.kubernetes.io/safe-to-evict=true must be added to pods.
+spec:
+  validationFailureAction: audit
+  background: false
+  rules:
   - name: annotate-empty-dir
-    match: 
-      resources: 
-        kinds: 
+    match:
+      resources:
+        kinds:
         - Pod
-    mutate: 
+    mutate:
       patchStrategicMerge:
         metadata:
           annotations:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
-        spec:          
-          volumes: 
+        spec:
+          volumes:
           - (emptyDir): {}
   - name: annotate-host-path
-    match: 
-      resources: 
-        kinds: 
+    match:
+      resources:
+        kinds:
         - Pod
-    mutate: 
+    mutate:
       patchStrategicMerge:
         metadata:
           annotations:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
-        spec:          
-          volumes: 
+        spec:
+          volumes:
           - (hostPath):
               path: "*"
