--- a/best-practices/disallow_helm_tiller/disallow_helm_tiller.yaml
+++ b/best-practices/disallow_helm_tiller/disallow_helm_tiller.yaml
@@ -15,6 +15,7 @@ metadata:
       containing the name `tiller`.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
     - name: validate-helm-tiller
       match:
