--- a/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
+++ b/best-practices/require_drop_cap_net_raw/require_drop_cap_net_raw.yaml
@@ -15,6 +15,7 @@ metadata:
       ability.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: drop-cap-net-raw
     match:
