--- a/other/always-pull-images.yaml
+++ b/other/always-pull-images.yaml
@@ -14,6 +14,7 @@ metadata:
       imagePullPolicy to Always. An alternative to the Kubernetes admission controller
       AlwaysPullImages.
 spec:
+  validationFailureAction: audit
   background: false
   rules:
   - name: always-pull-images
