--- a/other/disallow_localhost_services/disallow_localhost_services.yaml
+++ b/other/disallow_localhost_services/disallow_localhost_services.yaml
@@ -13,6 +13,7 @@ metadata:
       if the externalName field refers to localhost.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: no-localhost-service
     match:
