--- a/other/disallow_secrets_from_env_vars.yaml
+++ b/other/disallow_secrets_from_env_vars.yaml
@@ -13,6 +13,7 @@ metadata:
       applications. This policy disallows using Secrets as environment variables.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: secrets-not-from-env-vars
     match:
