--- a/other/inject_sidecar_deployment.yaml
+++ b/other/inject_sidecar_deployment.yaml
@@ -11,8 +11,9 @@ metadata:
       insert components via tacit modification of a submitted resource. This is, for example,
       often how service meshes and secrets applications are able to function transparently.
       This policy injects a sidecar container, initContainer, and volume into Pods that match
-      an annotation called `vault.hashicorp.com/agent-inject: true`. 
+      an annotation called `vault.hashicorp.com/agent-inject: true`.
 spec:
+  validationFailureAction: audit
   background: false
   rules:
   - name: inject-sidecar
