--- a/other/pod_lifetime_annotation/enforce_pod_duration.yaml
+++ b/other/pod_lifetime_annotation/enforce_pod_duration.yaml
@@ -12,8 +12,8 @@ metadata:
       such as to ensure a Pod lifetime annotation does not exceed some site specific max threshold.
       Pod lifetime annotation can be no greater than 8 hours.
 spec:
-  background: false
   validationFailureAction: audit
+  background: true
   rules:
   - name: pods-lifetime
     match:
