--- a/other/require_imagepullsecrets.yaml
+++ b/other/require_imagepullsecrets.yaml
@@ -13,6 +13,7 @@ metadata:
       other than ghcr.io or quay.io an `imagePullSecret` is required.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: check-for-image-pull-secrets
     match:
