--- a/other/restrict_service_account.yaml
+++ b/other/restrict_service_account.yaml
@@ -13,11 +13,11 @@ metadata:
       restrictions. Confining Pods to a list of authorized ServiceAccounts can be useful to
       ensure applications in those Pods do not have more privileges than they should.
       This policy verifies that in the `staging` Namespace the ServiceAccount being
-      specified is matched based on the image and name of the container. For example: 
+      specified is matched based on the image and name of the container. For example:
       'sa-name: ["registry/image-name"]'
 spec:
-  background: false
   validationFailureAction: audit
+  background: true
   rules:
   - name: validate-service-account
     context:
@@ -37,4 +37,4 @@ spec:
         conditions:
         - key: "{{ images.containers.*.registry | [0] }}/{{ images.containers.*.name | [0] }}"
           operator: NotIn
-          value: "{{ saMap.data.\"{{ request.object.spec.serviceAccountName }}\" }}" 
+          value: "{{ saMap.data.\"{{ request.object.spec.serviceAccountName }}\" }}"
