--- a/best-practices/add_network_policy.yaml
+++ b/best-practices/add_network_policy.yaml
@@ -7,19 +7,20 @@ metadata:
     policies.kyverno.io/category: Multi-Tenancy
     policies.kyverno.io/subject: NetworkPolicy
     policies.kyverno.io/description: >-
-      By default, Kubernetes allows communications across all Pods within a cluster. 
-      The NetworkPolicy resource and a CNI plug-in that supports NetworkPolicy must be used to restrict 
-      communications. A default NetworkPolicy should be configured for each Namespace to 
-      default deny all ingress and egress traffic to the Pods in the Namespace. Application 
-      teams can then configure additional NetworkPolicy resources to allow desired traffic 
+      By default, Kubernetes allows communications across all Pods within a cluster.
+      The NetworkPolicy resource and a CNI plug-in that supports NetworkPolicy must be used to restrict
+      communications. A default NetworkPolicy should be configured for each Namespace to
+      default deny all ingress and egress traffic to the Pods in the Namespace. Application
+      teams can then configure additional NetworkPolicy resources to allow desired traffic
       to application Pods from select sources. This policy will create a new NetworkPolicy resource
       named `default-deny` which will deny all traffic anytime a new Namespace is created.
 spec:
   validationFailureAction: audit
+  background: false
   rules:
   - name: default-deny
     match:
-      resources: 
+      resources:
         kinds:
         - Namespace
     generate:
@@ -32,6 +33,6 @@ spec:
           # select all pods in the namespace
           podSelector: {}
           # deny all traffic
-          policyTypes: 
+          policyTypes:
           - Ingress
           - Egress
