--- a/best-practices/disallow_latest_tag/disallow_latest_tag.yaml
+++ b/best-practices/disallow_latest_tag/disallow_latest_tag.yaml
@@ -8,12 +8,13 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      The ':latest' tag is mutable and can lead to unexpected errors if the 
-      image changes. A best practice is to use an immutable tag that maps to 
+      The ':latest' tag is mutable and can lead to unexpected errors if the
+      image changes. A best practice is to use an immutable tag that maps to
       a specific version of an application Pod. This policy validates that the image
       specifies a tag and that it is not called `latest`.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: require-image-tag
     match:
@@ -21,7 +22,7 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "An image tag is required."  
+      message: "An image tag is required."
       pattern:
         spec:
           containers:
