--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -8,12 +8,13 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Capabilities permit privileged actions without giving full root access. All 
+      Capabilities permit privileged actions without giving full root access. All
       capabilities should be dropped from a Pod, with only those required added back.
       This policy ensures that all containers explicitly specify the `drop: ["ALL"]`
       ability.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: check-containers
     match:
