--- a/best-practices/require_labels/require_labels.yaml
+++ b/best-practices/require_labels/require_labels.yaml
@@ -9,11 +9,12 @@ metadata:
     policies.kyverno.io/subject: Pod, Label
     policies.kyverno.io/description: >-
       Define and use labels that identify semantic attributes of your application or Deployment.
-      A common set of labels allows tools to work collaboratively, describing objects in a common manner that 
-      all tools can understand. The recommended labels describe applications in a way that can be 
+      A common set of labels allows tools to work collaboratively, describing objects in a common manner that
+      all tools can understand. The recommended labels describe applications in a way that can be
       queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: check-for-labels
     match:
