--- a/best-practices/require_ro_rootfs/require_ro_rootfs.yaml
+++ b/best-practices/require_ro_rootfs/require_ro_rootfs.yaml
@@ -8,13 +8,14 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      A read-only root file system helps to enforce an immutable infrastructure strategy; 
-      the container only needs to write on the mounted volume that persists the state. 
-      An immutable root filesystem can also prevent malicious binaries from writing to the 
+      A read-only root file system helps to enforce an immutable infrastructure strategy;
+      the container only needs to write on the mounted volume that persists the state.
+      An immutable root filesystem can also prevent malicious binaries from writing to the
       host system. This policy validates that containers define a securityContext
       with `readOnlyRootFilesystem: true`.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: validate-readOnlyRootFilesystem
     match:
