--- a/best-practices/restrict-service-external-ips/restrict-service-external-ips.yaml
+++ b/best-practices/restrict-service-external-ips/restrict-service-external-ips.yaml
@@ -14,6 +14,7 @@ metadata:
       that the `externalIPs` field is not set on a Service.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: check-ips
     match:
