--- a/best-practices/restrict_node_port/restrict_node_port.yaml
+++ b/best-practices/restrict_node_port/restrict_node_port.yaml
@@ -8,12 +8,14 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
     policies.kyverno.io/description: >-
-      A Kubernetes Service of type NodePort uses a host port to receive traffic from 
-      any source. A NetworkPolicy cannot be used to control traffic to host ports. 
-      Although NodePort Services can be useful, their use must be limited to Services 
+      A Kubernetes Service of type NodePort uses a host port to receive traffic from
+      any source. A NetworkPolicy cannot be used to control traffic to host ports.
+      Although NodePort Services can be useful, their use must be limited to Services
       with additional upstream security checks. This policy validates that any new Services
       do not use the `NodePort` type.
 spec:
+  validationFailureAction: audit
+  background: true
   rules:
   - name: validate-nodeport
     match:
@@ -22,6 +24,6 @@ spec:
         - Service
     validate:
       message: "Services of type NodePort are not allowed."
-      pattern: 
+      pattern:
         spec:
           type: "!NodePort"
