--- a/cert-manager/restrict-issuer/restrict-issuer.yaml
+++ b/cert-manager/restrict-issuer/restrict-issuer.yaml
@@ -14,7 +14,7 @@ metadata:
       ensures that a certificate request for a specific domain uses a designated ClusterIssuer.
 spec:
   validationFailureAction: audit
-  background: false
+  background: true
   rules:
   - name: restrict-corp-cert-issuer
     match:
