--- a/other/add_labels.yaml
+++ b/other/add_labels.yaml
@@ -13,6 +13,8 @@ metadata:
       used throughout Kubernetes. This policy performs a simple mutation which adds a label
       `foo=bar` to Pods, Services, ConfigMaps, and Secrets.
 spec:
+  validationFailureAction: audit
+  background: false
   rules:
   - name: add-labels
     match:
