--- a/other/add_ndots.yaml
+++ b/other/add_ndots.yaml
@@ -11,6 +11,7 @@ metadata:
       and needs to be set to a lower value than the default of 5 in some cases.
       This policy mutates all Pods to add the ndots option with a value of 1.
 spec:
+  validationFailureAction: audit
   background: false
   rules:
   - name: add-ndots
