--- a/other/add_volume_deployment.yaml
+++ b/other/add_volume_deployment.yaml
@@ -13,6 +13,7 @@ metadata:
       Vault, adds a volume and volumeMount to a Deployment if there is an annotation called
       "vault.k8s.corp.net/inject=enabled" present.
 spec:
+  validationFailureAction: audit
   background: false
   rules:
   - name: add-volume
