--- a/other/block_updates_deletes.yaml
+++ b/other/block_updates_deletes.yaml
@@ -13,7 +13,7 @@ metadata:
       Service resource that contains the label `protected=true` unless by
       a cluster-admin.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
   - name: block-updates-deletes
@@ -23,7 +23,7 @@ spec:
         - Service
         selector:
           matchLabels:
-            protected: "true"   
+            protected: "true"
     exclude:
       clusterRoles:
       - cluster-admin
@@ -33,6 +33,6 @@ spec:
         conditions:
           - key: "{{request.operation}}"
             operator: In
-            value: 
+            value:
             - DELETE
             - UPDATE
