--- a/other/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer.yaml
@@ -15,6 +15,7 @@ metadata:
       use of the Service type LoadBalancer.
 spec:
   validationFailureAction: audit
+  background: true
   rules:
   - name: no-LoadBalancer
     match:
