--- a/other/restrict_usergroup_fsgroup_id.yaml
+++ b/other/restrict_usergroup_fsgroup_id.yaml
@@ -3,16 +3,18 @@ kind: ClusterPolicy
 metadata:
   name: validate-userid-groupid-fsgroup
   annotations:
-    policies.kyverno.io/title: Validate User ID, Group ID, and FS Group 
+    policies.kyverno.io/title: Validate User ID, Group ID, and FS Group
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      All processes inside a Pod can be made to run with specific user and groupID 
-      by setting `runAsUser` and `runAsGroup` respectively. `fsGroup` can be specified 
-      to make sure any file created in the volume will have the specified groupID. 
+      All processes inside a Pod can be made to run with specific user and groupID
+      by setting `runAsUser` and `runAsGroup` respectively. `fsGroup` can be specified
+      to make sure any file created in the volume will have the specified groupID.
       This policy validates that these fields are set to the defined values.
 spec:
+  validationFailureAction: audit
+  background: true
   rules:
   - name: validate-userid
     match:
