--- a/other/sync_secrets.yaml
+++ b/other/sync_secrets.yaml
@@ -3,7 +3,7 @@ kind: ClusterPolicy
 metadata:
   name: sync-secrets
   annotations:
-    policies.kyverno.io/title: Sync Secrets 
+    policies.kyverno.io/title: Sync Secrets
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Secret
     policies.kyverno.io/description: >-
@@ -14,6 +14,7 @@ metadata:
       new Namespaces when they are created. It will also push updates to
       the copied Secrets should the source Secret be changed.
 spec:
+  validationFailureAction: audit
   background: false
   rules:
   - name: sync-image-pull-secret
