--- a/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
+++ b/pod-security/restricted/restrict-seccomp/restrict-seccomp.yaml
@@ -9,13 +9,14 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       The runtime default seccomp profile must be required, or only specific
-      additional profiles should be allowed. This policy ensures that only the
-      `runtime/default` is used as a `type`.
+      additional profiles should be allowed. This policy, requiring Kubernetes
+      v1.19 or later, ensures that only the `RuntimeDefault` or `Localhost` is
+      used as a `type` and that it is not unset.
 spec:
   background: true
   validationFailureAction: audit
   rules:
-  - name: seccomp
+  - name: restrict-seccomp
     match:
       resources:
         kinds:
@@ -26,17 +27,36 @@ spec:
         spec.securityContext.seccompProfile.type,
         spec.containers[*].securityContext.seccompProfile.type, and
         spec.initContainers[*].securityContext.seccompProfile.type
-        must be unset or set to `runtime/default`.
-      pattern:
-        spec:
-          =(securityContext):
-            =(seccompProfile):
-              =(type): "runtime/default"
-          =(initContainers):
-          - =(securityContext):
-              =(seccompProfile):
-                =(type): "runtime/default"
+        must be set to `RuntimeDefault` or `Localhost`.
+      anyPattern:
+      - spec:
+          securityContext:
+            seccompProfile:
+              type: "RuntimeDefault | Localhost"
+      - spec:
           containers:
-          - =(securityContext):
-              =(seccompProfile):
-                =(type): "runtime/default"
+          - securityContext:
+              seccompProfile:
+                type: "RuntimeDefault | Localhost"
+  - name: restrict-seccomp-initcontainers
+    match:
+      resources:
+        kinds:
+        - Pod
+    validate:
+      message: >-
+        Use of custom Seccomp profiles is disallowed. The fields
+        spec.securityContext.seccompProfile.type,
+        spec.containers[*].securityContext.seccompProfile.type, and
+        spec.initContainers[*].securityContext.seccompProfile.type
+        must be set to `RuntimeDefault` or `Localhost`.
+      anyPattern:
+      - spec:
+          securityContext:
+            seccompProfile:
+              type: "RuntimeDefault | Localhost"
+      - spec:
+          =(initContainers):
+          - securityContext:
+              seccompProfile:
+                type: "RuntimeDefault | Localhost"
