--- a/other/disallow_secrets_from_env_vars/test.yaml
+++ b/other/disallow_secrets_from_env_vars/test.yaml
@@ -9,23 +9,23 @@ results:
     resource: secret-env-pod
     kind: Pod
     namespace: default
-    status: fail
+    result: fail
   - policy: secrets-not-from-env-vars
     rule: secrets-not-from-envfrom
     resource: secret-env-pod
     kind: Pod
     namespace: default
-    status: pass
+    result: pass
   - policy: secrets-not-from-env-vars
     rule: secrets-not-from-envfrom
     resource: secret-ref-pod
     kind: Pod
     namespace: default
-    status: fail
+    result: fail
   - policy: secrets-not-from-env-vars
     rule: secrets-not-from-env-vars
     resource: secret-ref-pod
     kind: Pod
     namespace: default
-    status: pass
+    result: pass
   
