--- a/other/imagepullpolicy-always/test.yaml
+++ b/other/imagepullpolicy-always/test.yaml
@@ -9,10 +9,10 @@ results:
     resource: myapp-pod-1
     kind: Pod
     namespace: default
-    status: pass
+    result: pass
   - policy: imagepullpolicy-always
     rule: imagepullpolicy-always
     resource: myapp-pod-2
     kind: Pod
     namespace: default
-    status: fail
+    result: fail
