--- a/other/restrict_ingress_classes/test.yaml
+++ b/other/restrict_ingress_classes/test.yaml
@@ -9,10 +9,10 @@ results:
     resource: minimal-ingress-1
     kind: Ingress
     namespace: default
-    status: pass
+    result: pass
   - policy: restrict-ingress-classes
     rule: validate-ingress
     resource: minimal-ingress-2
     kind: Ingress
     namespace: default
-    status: fail
+    result: fail
