--- a/other/restrict_node_selection/test.yaml
+++ b/other/restrict_node_selection/test.yaml
@@ -9,22 +9,22 @@ results:
     resource: myapp-pod-1
     kind: Pod
     namespace: default
-    status: fail  
+    result: fail  
   - policy: restrict-node-selection
     rule: restrict-nodename
     resource: myapp-pod-1
     kind: Pod
     namespace: default
-    status: pass
+    result: pass
   - policy: restrict-node-selection
     rule: restrict-nodeselector
     resource: myapp-pod-2
     kind: Pod
     namespace: default
-    status: pass 
+    result: pass 
   - policy: restrict-node-selection
     rule: restrict-nodename
     resource: myapp-pod-2
     kind: Pod
     namespace: default
-    status: fail
+    result: fail
