Added negative test for restrict-controlplane-scheduling/restrict-controlplane-scheduling-control-plane
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/restrict_controlplane_scheduling/test.yaml
+++ b/other/restrict_controlplane_scheduling/test.yaml
@@ -6,13 +6,25 @@ resources:
 results:
   - policy: restrict-controlplane-scheduling
     rule: restrict-controlplane-scheduling-master
-    resource: myapp-pod
+    resource: myapp-pod-1
     kind: Pod
     namespace: default
     result: fail
   - policy: restrict-controlplane-scheduling
     rule: restrict-controlplane-scheduling-control-plane
-    resource: myapp-pod
+    resource: myapp-pod-2
+    kind: Pod
+    namespace: default
+    result: fail
+  - policy: restrict-controlplane-scheduling
+    rule: restrict-controlplane-scheduling-master
+    resource: myapp-pod-2
+    kind: Pod
+    namespace: default
+    result: pass
+  - policy: restrict-controlplane-scheduling
+    rule: restrict-controlplane-scheduling-control-plane
+    resource: myapp-pod-1
     kind: Pod
     namespace: default
     result: pass
