--- a/pod-security/restricted/restrict-seccomp/resource.yaml
+++ b/pod-security/restricted/restrict-seccomp/resource.yaml
@@ -2,7 +2,19 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: seccomp-pod
+  name: seccomp-pod-spec-undefined
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers:
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-pod-spec-unconfined
 spec:
   securityContext:
     runAsNonRoot: true
@@ -16,7 +28,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: seccomp-ctnr
+  name: seccomp-pod-cont1-unconfined
 spec:
   securityContext:
     runAsNonRoot: true
@@ -24,22 +36,191 @@ spec:
   - name: seccomp
     image: busybox
     command: ["sleep", "9999"]
-    seccompProfile:
-      type: Unconfined
+    securityContext:
+      seccompProfile:
+        type: Unconfined
 ---
 apiVersion: v1
 kind: Pod
 metadata:
-  name: seccomp-init-ctnr
+  name: seccomp-pod-cont2-inconsistent
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers:
+  - name: seccomp00
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+  - name: seccomp01
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-pod-cont2-inconsistent1
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers:
+  - name: seccomp00
+    image: busybox
+    command: ["sleep", "9999"]
+  - name: seccomp01
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-pod-initcont-undefined
 spec:
   securityContext:
     runAsNonRoot: true
   initContainers:
+  - name: initseccomp
+    image: busybox
+    command: ["sleep", "9999"]
+  containers:
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-pod-initcont-unconfined
+spec:
+  securityContext:
+    runAsNonRoot: true
+  initContainers:
+  - name: initseccomp
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: Unconfined
+  containers:
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-good-pod
+spec:
+  securityContext:
+    runAsNonRoot: true
+    seccompProfile:
+      type: RuntimeDefault
+  containers: 
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-good-pod-localhost
+spec:
+  securityContext:
+    runAsNonRoot: true
+    seccompProfile:
+      type: Localhost
+      localhostProfile: profiles/audit.json
+  containers: 
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-good-pod-cont1-runtimedefault
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers: 
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-good-pod-cont2-runtimedefault
+spec:
+  securityContext:
+    runAsNonRoot: true
+  containers: 
+  - name: seccomp00
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+  - name: seccomp01
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-good-pod-initcont
+spec:
+  securityContext:
+    runAsNonRoot: true
+  initContainers: 
   - name: seccomp-init
     image: busybox
     command: ["sleep", "9999"]
-    seccompProfile:
-      type: Unconfined
-  containers:
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+  containers: 
   - name: seccomp
-    image: kubernetes/pause
+    image: busybox
+    command: ["sleep", "9999"]
+    securityContext:
+      seccompProfile:
+        type: RuntimeDefault
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: seccomp-good-pod-initcont1
+spec:
+  securityContext:
+    runAsNonRoot: true
+    seccompProfile:
+      type: RuntimeDefault
+  initContainers: 
+  - name: seccomp-init
+    image: busybox
+    command: ["sleep", "9999"]
+  containers: 
+  - name: seccomp
+    image: busybox
+    command: ["sleep", "9999"]
