update drop all message
Signed-off-by: Chip Zoller <chipzoller@gmail.com>

--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -21,7 +21,9 @@ spec:
         kinds:
         - Pod
     validate:
-      message: "All capabilities should be dropped with only those required added back."
+      message: >-
+        All capabilities should be dropped with only those required added back. Drop `ALL` must be
+        specified in all caps.
       pattern:
         spec:
           containers:
