Update add-safe-to-evict using global anchor
Signed-off-by: Maxim Goncharenko <goncharenko.maxim@apriorit.com>

--- a/best-practices/add_safe_to_evict.yaml
+++ b/best-practices/add_safe_to_evict.yaml
@@ -24,7 +24,7 @@ spec:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
         spec:          
           volumes: 
-          - (emptyDir): {}
+          - <(emptyDir): {}
   - name: annotate-host-path
     match: 
       resources: 
@@ -37,5 +37,5 @@ spec:
             +(cluster-autoscaler.kubernetes.io/safe-to-evict): "true"
         spec:          
           volumes: 
-          - (hostPath):
-              path: "*"
+          - hostPath:
+              <(path): "*"
