Added one more resource of type Service
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/add_labels/resource.yaml
+++ b/other/add_labels/resource.yaml
@@ -6,3 +6,17 @@ spec:
   containers:
   - name: nginx
     image: nginx:latest
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-service
+spec:
+  type: NodePort
+  selector:
+    app: MyApp
+  ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
