Added result of the resource in test.yaml file
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/add_labels/test.yaml
+++ b/other/add_labels/test.yaml
@@ -11,3 +11,10 @@ results:
     kind: Pod
     namespace: default
     result: pass
+  - policy: add-labels
+    rule: add-labels
+    resource: my-service
+    patchedResource: patchedResource1.yaml
+    kind: Service
+    namespace: default
+    result: pass
