status to result
Signed-off-by: viveksahu26 <vivekkumarsahu650@gmail.com>

--- a/other/add_volume_deployment/test.yaml
+++ b/other/add_volume_deployment/test.yaml
@@ -9,4 +9,4 @@ results:
     resource: mydeploy
     patchedResource: patchedResource.yaml
     kind: Deployment
-    status: pass
+    result: pass
