--- a/best-practices/disallow-empty-ingress-host/test.yaml
+++ b/best-practices/disallow-empty-ingress-host/test.yaml
@@ -11,4 +11,4 @@ results:
   - policy: disallow-empty-ingress-host
     rule: disallow-empty-ingress-host
     resource: minimal-ingress
-    result: pass
+    result: fail
